terraform/routes.tf
resource "aws_route" "public_internet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.nimbriq.id
}

resource "aws_route_table_association" "public" {
  subnet_id      = module.network.public_subnet_id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  subnet_id      = module.network.private_subnet_id
  route_table_id = aws_route_table.private.id
}
